[gd_scene load_steps=6 format=3 uid="uid://bkquoqbrb6bh2"]

[ext_resource type="Script" path="res://ui/hud/train_hud.gd" id="1_asv8f"]
[ext_resource type="PackedScene" uid="uid://b4s3pgrykws8i" path="res://ui/subscenes/button_hud.tscn" id="2_7ixmm"]
[ext_resource type="PackedScene" uid="uid://b2utiw3nl1pqr" path="res://ui/hud/subscenes/status_panel.tscn" id="2_k8b6u"]

[sub_resource type="InputEventAction" id="InputEventAction_pnlg5"]
action = &"talk"

[sub_resource type="Shortcut" id="Shortcut_8icef"]
events = [SubResource("InputEventAction_pnlg5")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_asv8f")

[node name="ButtonHudMargin" type="MarginContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -226.0
offset_top = -94.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 50

[node name="ButtonHud" parent="ButtonHudMargin" instance=ExtResource("2_7ixmm")]
unique_name_in_owner = true
layout_mode = 2
shortcut = SubResource("Shortcut_8icef")
text = "Intergieren   "

[node name="StatusPanelMargin" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -169.0
offset_right = 515.0
grow_vertical = 0
theme_override_constants/margin_left = 50
theme_override_constants/margin_bottom = 50

[node name="StatusPanel" parent="StatusPanelMargin" instance=ExtResource("2_k8b6u")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="ButtonHudMargin/ButtonHud" to="." method="_on_button_hud_pressed"]
